# bitpin

./: .env  .gitignore  Dockerfile  apt-packages  docker-compose.yml  monitoring-docker-compose.yml  prepare.sh  pyproject.toml
interview_task/: Dockerfile  start_app.sh
interview_task/blog/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
interview_task/interview_task/: settings.py  urls.py
interview_task/scripts/: create_users.py
interview_task/utils/: metrics_common.py
