[tool.poetry]
name = "bitpin-interview"
version = "0.1.0"
description = ""
authors = ["aliraee1 <aliraee1@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-rest-framework = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
