[tool.poetry]
name = "bitpin-interview"
version = "0.1.0"
description = ""
authors = ["aliraee1 <aliraee1@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-rest-framework = "^0.1.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
celery = "^5.4.0"
redis = "^5.0.7"
drf-yasg = "^1.21.7"
sphinx = "^7.3.7"
django-extensions = "^3.2.3"
pygraphviz = "^1.13"
django-redis = "^5.4.0"
prometheus-client = "^0.20.0"
django-prometheus = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
